[package]
name = "galnet-scraper"
version = "0.1.0"
authors = ["Leo Dutra <leodutra.br@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0.1", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3.12"
