[package]
name = "galnet-scraper"
version = "0.1.0"
authors = ["Leo Dutra <leodutra.br@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
lazy_static = "1.4.0"
reqwest = { version = "0.11.0", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.1", features = ["full"] }
