[package]
name = "ed-galnet-scraper"
version = "0.1.0"
authors = ["Leo Dutra <leodutra.br@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
glob = "0.3"
lazy_static = "1.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
